--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,23 @@
 .box{
     width: 50px;
     height: 50px;
-    background-color: green;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 4px;
+}
+
+.pointer{
+    width: 20px;
+    background-color: red;
+    height: 20px;
+    border-radius:100px;;
 }
 
 img{
     width: 40px;
+}
+.tag{
+    background-color: inherit;
+    padding: 5px;
 }
