--- a/styles/style.css
+++ b/styles/style.css
@@ -5,19 +5,22 @@
     align-items: center;
     justify-content: center;
     padding: 4px;
+    background-image: url(../img/grass.webp);
 }
 
 .pointer{
-    width: 20px;
+    width: 30px;
     background-color: red;
-    height: 20px;
-    border-radius:100px;;
+    height: 30px;
+    margin: 0;
 }
 
 img{
     width: 40px;
 }
 .tag{
-    background-color: inherit;
+    background-color: whitesmoke;
+    opacity: 0.75;
     padding: 5px;
+    border-radius: 10px;
 }
