--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+*{
+    font-family: 'Press Start 2P', cursive;
+}
+
 .box{
     width: 50px;
     height: 50px;
@@ -41,4 +45,47 @@ img#dado{
 }
 .enemy{
     width: 100px;
+}
+
+#gameOver{
+    padding: 3vh;
+    display: flex;
+    flex-direction: column;
+    width: 700px;
+    background-color: whitesmoke;
+    height: 200px;
+    border-radius: 2vh ;
+}
+
+#opciones{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+}
+
+#jugarOtra{
+    text-decoration: none;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-size: 15px;
+    background-color: red;
+}
+
+#gameOver h2{
+    margin: auto;
+}
+
+#opciones button{
+    padding: 10px;
+    color: white;
+    text-align: center;
+    border: 0px;
+    font-size: 15px;
+    background-color: green;
+    text-decoration: none;
+}
+
+#opciones button:hover{
+    cursor: pointer;
 }
