--- a/styles/style.css
+++ b/styles/style.css
@@ -78,9 +78,7 @@ img#dado{
 }
 
 table{
-    background-color: gray;
     padding: 10px;
-    border-radius: 1vh;
     width: 100%;
 }
 tr, td, th{
@@ -104,16 +102,21 @@ tr{
 }
 
 .panelPuntuaciones{
-    background-color: white;
+    background-color: whitesmoke;
     padding: 20px;
-    border-radius: 2vh;
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .panelPuntuaciones a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    margin: 20px;
     padding: 20px;
+    text-decoration: none;
+    background-color:green;
+    color: white;
 }
 
 #opciones button{
@@ -128,4 +131,56 @@ tr{
 
 #opciones button:hover{
     cursor: pointer;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+form *{
+    margin: 10px;
+}
+
+#jugar{
+    padding: 10px;
+    background-color: red;
+    border: 0px;
+    color: white;
+}
+
+#jugar:hover{
+    cursor: pointer;
+}
+
+#puntuaciones{
+    padding: 10px;
+    background-color: green;
+    border: 0px;
+    color: white;
+}
+
+#puntuaciones:hover{
+    cursor: pointer;
+}
+
+.container{
+    background-color: whitesmoke;
+    padding: 20px;
+}
+
+#panelDado{
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    padding: 20px;
+}
+
+#vidasContainer img{
+    width: 50px;
+    padding: 10px;
 }
