--- a/styles/style.css
+++ b/styles/style.css
@@ -195,3 +195,37 @@ form *{
     width: 50px;
     padding: 10px;
 }
+
+#instrucciones{
+    background-color: brown;
+    color: white;
+    padding: 10px;
+    border: 0;
+    cursor: pointer;
+}
+
+.instrucciones{
+    background-color: whitesmoke;
+    width: 50%;
+    padding: 4vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.instrucciones a{
+    text-align: center;
+    margin-top: 20px;
+    padding: 20px;
+    text-decoration: none;
+    background-color:green;
+    color: white;
+}
+.instrucciones p {
+    line-height: 30px;
+}
+
+.container{
+    text-align: center;
+}
